created project base

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devsteam-base",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.1",
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
